Default value for certain settings updated in help pages

--- a/DScaler/Help/22Pulldown.HTM
+++ b/DScaler/Help/22Pulldown.HTM
@@ -83,7 +83,7 @@ evedence that we are no longer in film mode</td>
 
 <tr>
 <td>PAL Video Mode</td>
-<td>Greedy 2 Frame</td>
+<td>Dependent on CPU selection in general hardware dialog box</td>
 <td>This is the mode that will be used when film mode has not been detected</td>
 </tr>
 
@@ -111,7 +111,7 @@ allowed to the bad cadence method before switching back to video mode.
 
 <tr>
 <td>PAL Bad Cadence Mode</td>
-<td>Greedy</td>
+<td>Greedy Low Motion</td>
 <td>If we have tuned off "Bad Pulldown Filter" then this mode is activated when 
  bad cadence is detected.</td>
 </tr>
