--- a/DScaler/Help/32Pulldown.HTM
+++ b/DScaler/Help/32Pulldown.HTM
@@ -65,7 +65,7 @@ alogrithm</a>.  This uses field differences to detect field repeats.</p>
 
 <tr>
 <td>NTSC Video Mode</td>
-<td>Adaptive</td>
+<td>Dependent on CPU selection in general hardware dialog box</td>
 <td>This is the mode that will be used when film mode has not been detected.</td>
 </tr>
 
@@ -137,7 +137,7 @@ pulldown mode can be called.</td>
 
 <tr>
 <td>NTSC Bad Cadence Mode</td>
-<td>Greedy</td>
+<td>Greedy Low Motion</td>
 <td>If "Bad Pulldown Filter" is off then this mode is used until either the above count 
 runs out or a new film mode is detected.</td>
 </tr>
