--- a/DScaler/Help/Timing.HTM
+++ b/DScaler/Help/Timing.HTM
@@ -66,7 +66,7 @@ height="2"></td>
 
 <tr>
 <td>Auto Format Detect</td>
-<td>On</td>
+<td>ON</td>
 <td>Should we try and spot input format changes</td>
 </tr>
 
@@ -91,13 +91,13 @@ switching.</td>
 
 <tr>
 <td>Do JudderTerminator On Video Modes</td>
-<td>ON</td>
+<td>OFF</td>
 <td>If global JudderTerminator is on then should it be used in video mode.</td>
 </tr>
 
 <tr>
 <td>Sleep Interval</td>
-<td>1</td>
+<td>0</td>
 <td>Number of ms to sleep when waiting.</td>
 </tr>
 
