Prep for new version

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,34 +54,44 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.6</h1>
+<h1>DScaler - version 4.1.7</h1>
 
 <p>What's new:<br>
 <ul>
-<li>Support for CX2388x based cards</li>
-<li>Support for SAA7134 based cards</li>
-<li>DirectShow support for tuners and file (experimental feature)</li>
-<li>Skins & Toolbar (experimental feature)</li>
-<li>Resolution changing (experimental feature)</li>
+<li>DScaler can work on multiple-monitors</li>
+<li>Black and white filter</li>
+<li>Y/C shift filter</li>
+<li>preview mode for TV channels allowing the display of several
+   channels at screen (with only one active)</li>
+<li>preview mode for stills</li>
+<li>new option in the general hardware setup dialog box to give
+   priority to other software</li>
+<li>limit (parameter driven) size of memory allocated
+   for stills</li>
 </ul></p>
 
 <p>What's Improved</p>
 <ul>
-<li>Audio Support for bt8x8 chips</li>
-<li>Noise Filters</li>
-<li>Logo Killer</li>
-<li>Support for full frequency scan for tuning</li> 
-<li>Improved tuner support</li> 
+<li>Settings management (including editing strings)</li> 
+<li>MoComp2 deinterlace mode</li> 
+<li>TomsMoComp deinterlace mode</li> 
+<li>WSS / CC decoding with SAA713x cards</li> 
+<li>Calibration procedure for SAA713x cards</li> 
+<li>Access denied error with the DScaler driver on localized versions of 
+Win2k/XP.</li>
 <li>Lots of bug fixes</li> 
 </ul></p>
 
 <p>What's Experimental:
 <ul>
+<li>PowerStrip modeline option when changing resolution in the
+   full screen mode</li>
 <li>DirectShow support for tuners and file</li>
 <li>Skins & Toolbar</li>
-<li>New Settings by Channel code</li>
 <li>Timeshift</li>
 <li>Resolution changing</li>
+<li>Colorimetry filter</li>
+<li>DScope video filter</li>
 </ul></p>
 
 <!-- #EndEditable -->
