--- a/htdocs/channels/index.htm
+++ b/htdocs/channels/index.htm
@@ -46,8 +46,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 			Since this list is just starting it is unlikely that your area is included here 
 			but please do try and help others by posing your working program.txt files to
 			<a href="mailto:deinterlace-channels@lists.sf.net">this mailing list.</a></p>
+      <H2>How to use</H2>
+      <P>This list is organised around country, then type, then location in alphabetical order.  If you find a suitable file please right click on the link then use save as to save the program.txt file to your machine. Please ensure that the fiel is saved as "program.txt".  You will then need to copy the file to your DScaler directory which is normally "c:\Program files\DScaler"</P>
       <H2>Holland</H2>
+      <H3>Cable</H3>
       <P><a href="download.php?filename=Program_CasemaZeist.txt&saveas=Program.txt">Casema zeist</a></P>
+      <H2>UK</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_NTLLangley.txt&saveas=Program.txt">NTL Langley</a></P>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
