--- a/htdocs/channels/index.htm
+++ b/htdocs/channels/index.htm
@@ -42,18 +42,35 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <h2>Introduction</h2>
       <p>Setting up your local channels can be an annoying process.  To try and help 
-			we are tring to build up a shared list of channel setups from all over the world.  
+			we are trying to build up a shared list of channel setups from all over the world.  
 			Since this list is just starting it is unlikely that your area is included here 
 			but please do try and help others by posing your working program.txt files to
 			<a href="mailto:deinterlace-channels@lists.sf.net">this mailing list.</a></p>
       <H2>How to use</H2>
-      <P>This list is organised around country, then type, then location in alphabetical order.  If you find a suitable file please right click on the link then use save as to save the program.txt file to your machine. Please ensure that the fiel is saved as "program.txt".  You will then need to copy the file to your DScaler directory which is normally "c:\Program files\DScaler"</P>
-      <H2>Holland</H2>
+      <P>This list is organised around country, then type, then location in alphabetical order.  If you find a suitable file please right click on the link then use save as to save the program.txt file to your machine. Please ensure that the file is saved as "program.txt".  You will then need to copy the file to your DScaler directory which is normally "c:\Program files\DScaler"</P>
+      <H2>Argentina</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_Cablevision.txt&saveas=Program.txt">Cablevision (Chaco – Resistencia)</a> from Guillermo Ruffino</P>
+      <H2>Germany</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_Primacom.txt&saveas=Program.txt">Primacom</a> from Maik Riechert</P>
+      <H2>Greece</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_Greece.txt&saveas=Program.txt">Greece</a> from Sokratis Klimis</P>
+      <H2>Netherlands</H2>
       <H3>Cable</H3>
       <P><a href="download.php?filename=Program_CasemaZeist.txt&saveas=Program.txt">Casema zeist</a></P>
+			<P><a href="download.php?filename=Program_EssentKerkrade.txt&saveas=Program.txt">Essent Kerkrade (Limburg)</a> from Bert Gulikers</P>
+      <P><a href="download.php?filename=Program_UPCBuren.txt&saveas=Program.txt">UPC Buren</a> from Han Geesink</P>
+      <H2>Romania</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_Bucharest.txt&saveas=Program.txt">Bucharest - Astral TV</a> from stargate</P>
       <H2>UK</H2>
       <H3>Cable</H3>
-      <P><a href="download.php?filename=Program_NTLLangley.txt&saveas=Program.txt">NTL Langley</a></P>
+      <P><a href="download.php?filename=Program_NTLLangley.txt&saveas=Program.txt">NTL Langley</a> from Richard Flint</P>
+      <H3>Terrestrial</H3>
+      <P><a href="download.php?filename=Program_CrystalPalace.txt&saveas=Program.txt">Crystal Palace</a> from John Adcock</P>
+      <P><a href="download.php?filename=Program_SuttonColdfield.txt&saveas=Program.txt">Sutton Coldfield</a> from Thomas Cartwright</P>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
