--- a/htdocs/channels/index.htm
+++ b/htdocs/channels/index.htm
@@ -44,10 +44,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p>Setting up your local channels can be an annoying process.  To try and help 
 			we are trying to build up a shared list of channel setups from all over the world.  
 			Since this list is just starting it is unlikely that your area is included here 
-			but please do try and help others by posing your working program.txt files to
-			<a href="mailto:deinterlace-channels@lists.sf.net">this mailing list.</a></p>
+			but please do try and help others by posting your working program.txt files to
+			<a href="mailto:deinterlace-channels@lists.sf.net">this mailing list</a>.</p>
       <H2>How to use</H2>
-      <P>This list is organised around country, then type, then location in alphabetical order.  If you find a suitable file please right click on the link then use save as to save the program.txt file to your machine. Please ensure that the file is saved as "program.txt".  You will then need to copy the file to your DScaler directory which is normally "c:\Program files\DScaler"</P>
+      <P>This list is organised around country, then type, then location in alphabetical order.  If you find a suitable file please right click on the link then use save as to save the file as program.txt file to your machine. Please ensure that the file is saved as "program.txt".  You will then need to copy the file to your DScaler directory which is normally "c:\Program files\DScaler"</P>
       <H2>Argentina</H2>
       <H3>Cable</H3>
       <P><a href="download.php?filename=Program_Cablevision.txt&saveas=Program.txt">Cablevision (Chaco – Resistencia)</a> from Guillermo Ruffino</P>
