--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -172,7 +172,8 @@ alter ego "Hermes Conrad".</p>
 <h2>Atsushi Nakagawa</h2>
 
 <blockquote>
-<p>Atsushi added support for Philips' SAA7130/4 based cards.</p>
+<p>Atsushi added support for Philips' SAA7130/4 based cards. He is now one of the
+driving forces behind the project.</p>
 </blockquote>
 
 <p>Please see the <a href="Thanks.htm">Thanks</a> file for an
