--- a/htdocs/Authors.htm
+++ b/htdocs/Authors.htm
@@ -119,10 +119,10 @@ purple-lines interference.</p>
 <h2>Laurent Garnier</h2>
 
 <blockquote>
-<p>In his time off from being confused with the similarly named French DJ, 
-Laurent has been very busy adding some of the coolest new features in recent releases:
-auto-calibration, the OSD (On Screen Display), WSS (WideScreen Signalling) and per-format
-settings.</p>
+<p>In his time off from being confused with the similarly named French DJ, Laurent 
+has been very busy adding some of the coolest new features in recent 
+releases: auto-calibration, the OSD (On Screen Display), WSS (WideScreen 
+Signalling), stills source and patterns.</p>
 </blockquote>
 
 <h2>Torbj&ouml;rn Jansson</h2>
@@ -163,10 +163,22 @@ alter ego "Hermes Conrad".</p>
 <p>Added support for overlay colour controls.</p>
 </blockquote>
 
+<h2>Rob Muller</h2>
+
+<blockquote>
+<p>Rob has quickly established himself as a core part of the team.  He has fixed problems all over the code and also provided the new setup routine.</p>
+</blockquote>
+
+<h2>Atsushi Nakagawa</h2>
+
+<blockquote>
+<p>Atsushi added support for Philips' SAA7130/4 based cards. He is now one of the
+driving forces behind the project.</p>
+</blockquote>
+
 <p>Please see the <a href="Thanks.htm">Thanks</a> file for an
 incomplete list of the many others who have contributed time and
 effort.</p>
-
 <!-- #EndEditable -->
 </td>
 </tr>
