Got up to date with program list

--- a/htdocs/channels/index.htm
+++ b/htdocs/channels/index.htm
@@ -43,34 +43,88 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h2>Introduction</h2>
       <p>Setting up your local channels can be an annoying process.  To try and help 
 			we are trying to build up a shared list of channel setups from all over the world.  
-			Since this list is just starting it is unlikely that your area is included here 
-			but please do try and help others by posting your working program.txt files to
-			<a href="mailto:deinterlace-channels@lists.sf.net">this mailing list</a>.</p>
+			Please do try and help others by posting your working program.txt files to
+			<a href="mailto:deinterlace-channels@lists.sf.net">this mailing list.</a></p>
       <H2>How to use</H2>
       <P>This list is organised around country, then type, then location in alphabetical order.  If you find a suitable file please right click on the link then use save as to save the file as program.txt file to your machine. Please ensure that the file is saved as "program.txt".  You will then need to copy the file to your DScaler directory which is normally "c:\Program files\DScaler"</P>
       <H2>Argentina</H2>
       <H3>Cable</H3>
       <P><a href="download.php?filename=Program_Cablevision.txt&saveas=Program.txt">Cablevision (Chaco – Resistencia)</a> from Guillermo Ruffino</P>
+      <H2>Australia</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_AusAllCable.txt&saveas=Program.txt">All Cable</a> from Tony Puryer</P>
+      <P><a href="download.php?filename=Program_Optus.txt&saveas=Program.txt">Optus</a> from Daniel Moloney</P>
+      <H2>Belguim</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_Brutele.txt&saveas=Program.txt">Brussels - Brutélé (English first)</a> from Richard Parslow</P>
+      <H2>Czech Republic</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_UPCPrague.txt&saveas=Program.txt">UPC Prague</a> from Martin Konícek</P>
       <H2>Germany</H2>
       <H3>Cable</H3>
       <P><a href="download.php?filename=Program_Primacom.txt&saveas=Program.txt">Primacom</a> from Maik Riechert</P>
+      <H2>Hong Kong</H2>
+      <H3>Terrestrial</H3>
+      <P><a href="download.php?filename=Program_KowloonWest.txt&saveas=Program.txt">Kowloon West</a> from Gabriel Hung</P>
       <H2>Greece</H2>
       <H3>Cable</H3>
       <P><a href="download.php?filename=Program_Greece.txt&saveas=Program.txt">Greece</a> from Sokratis Klimis</P>
+      <H3>Terrestrial</H3>
+      <P><a href="download.php?filename=Program_Athens.txt&saveas=Program.txt">Athens (Imitos Transmitter)</a> from Efthymios Petrakis</P>
+      <H2>Macedonia</H2>
+      <H3>Terrestrial</H3>
+      <P><a href="download.php?filename=Program_Skopje.txt&saveas=Program.txt">Skopje</a> from Igor Popovski</P>
       <H2>Netherlands</H2>
       <H3>Cable</H3>
-      <P><a href="download.php?filename=Program_CasemaZeist.txt&saveas=Program.txt">Casema zeist</a></P>
+      <P><a href="download.php?filename=Program_Amsterdam.txt&saveas=Program.txt">Amsterdam</a> from  J.H. Kok</P>
+      <P><a href="download.php?filename=Program_CasemaDelft.txt&saveas=Program.txt">Delft (Casema)</a> from Piers Titus van der Torren</P>
 			<P><a href="download.php?filename=Program_EssentKerkrade.txt&saveas=Program.txt">Essent Kerkrade (Limburg)</a> from Bert Gulikers</P>
-      <P><a href="download.php?filename=Program_UPCBuren.txt&saveas=Program.txt">UPC Buren</a> from Han Geesink</P>
+			<P><a href="download.php?filename=Program_NunspeetNoordVeluwe.txt&saveas=Program.txt">Nunspeet / Noord-Veluwe (UPC)</a> from Ton den Boer</P>
+			<P><a href="download.php?filename=Program_Oostende.txt&saveas=Program.txt">Oostende (Mixt-ICS)</a> from Hans De Zutter</P>
+      <P><a href="download.php?filename=Program_UPCOverbetuwe.txt.txt&saveas=Program.txt">Overbetuwe (UPC)</a> from Piers Titus van der Torren</P>
+			<P><a href="download.php?filename=Program_Leeuwarden.txt&saveas=Program.txt">Leeuwarden (UPC)</a> from Mazzel</P>
+      <P><a href="download.php?filename=Program_UPCBuren.txt&saveas=Program.txt">Buren (UPC)</a> from Han Geesink</P>
+      <P><a href="download.php?filename=Program_CasemaZeist.txt&saveas=Program.txt">Zeist (Casema)</a></P>
+      <H2>Portugal</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_Netcabo.txt&saveas=Program.txt">Netcabo</a> from Rui Friaes</P>
+      <P><a href="download.php?filename=Program_TVcabo.txt&saveas=Program.txt">Porto (TVcabo)</a> from Daniel Ricardo</P>
       <H2>Romania</H2>
       <H3>Cable</H3>
+			<P><a href="download.php?filename=Program_Astral.txt&saveas=Program.txt"> Astral Bucuresti</a> from Bogdan Iordache</P>
       <P><a href="download.php?filename=Program_Bucharest.txt&saveas=Program.txt">Bucharest - Astral TV</a> from stargate</P>
+      <P><a href="download.php?filename=Program_RomsatFX.txt&saveas=Program.txt">Bucharest - Romsat / FX Communications</a> from Laur</P>
+			<P><a href="download.php?filename=Program_Timisoara.txt&saveas=Program.txt">Timisoara - UPC</a> from muresan</P>
+      <H2>Russia</H2>
+      <H3>Terrestrial</H3>
+      <P><a href="download.php?filename=Program_Krasnodar.txt&saveas=Program.txt">Krasnodar</a> from v3</P>
+      <H2>Serbia &amp Montenegro</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_MediaPlus.txt&saveas=Program.txt">SBB MediaPlus</a> from iinmii</P>
+      <P><a href="download.php?filename=Program_Vracar.txt&saveas=Program.txt">SBB,BGD (Vracar)</a> from Milos Heroes</P>
+      <H2>Slovenia</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_Telemach.txt&saveas=Program.txt">Telemach</a> from Zvonko Perovsek</P>
+      <H2>South Korea</H2>
+      <H3>Terrestrial</H3>
+      <P><a href="download.php?filename=Program_Incheon.txt&saveas=Program.txt">Incheon</a> from AirCon</P>
+      <H2>Sweden</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_SwedenCable.txt&saveas=Program.txt">COMHEM 03-området</a> from Max Rademacher</P>
+      <H2>Switzerland</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_Balcab.txt&saveas=Program.txt">Balcab</a> from Till Haldimann</P>
       <H2>UK</H2>
       <H3>Cable</H3>
       <P><a href="download.php?filename=Program_NTLLangley.txt&saveas=Program.txt">NTL Langley</a> from Richard Flint</P>
       <H3>Terrestrial</H3>
       <P><a href="download.php?filename=Program_CrystalPalace.txt&saveas=Program.txt">Crystal Palace</a> from John Adcock</P>
       <P><a href="download.php?filename=Program_SuttonColdfield.txt&saveas=Program.txt">Sutton Coldfield</a> from Thomas Cartwright</P>
+      <H2>USA</H2>
+      <H3>Cable</H3>
+      <P><a href="download.php?filename=Program_CablevisionNY.txt&saveas=Program.txt">New York/Westchester</a> from Ishan</P>
+      <P><a href="download.php?filename=Program_SEOhio.txt&saveas=Program.txt">Southeast Ohio (Adelphia)</a> from Jason Allberry</P>
+      <P><a href="download.php?filename=Program_UnivToledo.txt&saveas=Program.txt">Univercity of Toledo</a> from Charlie Hayes</P>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
