prepare for new version

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,32 +54,21 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.7</h1>
+<h1>DScaler - version 4.1.8</h1>
 
-<p>What's new:<br>
+<p>What's new (since 4.1.7):<br>
 <ul>
-<li>DScaler can work on multiple-monitors</li>
-<li>Black and white filter</li>
-<li>Y/C shift filter</li>
-<li>preview mode for TV channels allowing the display of several
-   channels at screen (with only one active)</li>
-<li>preview mode for stills</li>
-<li>new option in the general hardware setup dialog box to give
-   priority to other software</li>
-<li>limit (parameter driven) size of memory allocated
-   for stills</li>
+<li>Timeshift avi file path in advanced settings</li>
+<li>Improved Preview mode</li>
+<li>Ctrl+Up and Ctrl+Down keys added to request previous or next page of channels/stills when in previous mode</li>
+<li>Improved Toolbars and skins code</li>
 </ul></p>
 
 <p>What's Improved</p>
 <ul>
-<li>Settings management (including editing strings)</li> 
-<li>MoComp2 deinterlace mode</li> 
-<li>TomsMoComp deinterlace mode</li> 
-<li>WSS / CC decoding with SAA713x cards</li> 
-<li>Calibration procedure for SAA713x cards</li> 
-<li>Access denied error with the DScaler driver on localized versions of 
-Win2k/XP.</li>
-<li>Lots of bug fixes</li> 
+<li>Some multiple-monitor bug fixes</li>
+<li>Some timethift bug fixes</li>
+<li>Lots of other minor bug fixes</li> 
 </ul></p>
 
 <p>What's Experimental:
