Added Marco Kaiser's review in AF Digitale

--- a/htdocs/reviews/index.htm
+++ b/htdocs/reviews/index.htm
@@ -134,6 +134,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p>USA, november 2001 issue, article &quot;the 50$ scaler&quot; by Patrick 
         Megenity, (c) Primedia Group Inc.</p>
       <H2><img src="SGTHcover.jpg" width="92" height="117"></H2>
+      <H2><a href="http://www.afdigitale.it/">AF Digilale (Italy)</a></h2>			
+			<p><a href="http://www.edisport.it/edisport/afdigitale/magazine.nsf/175e9c958a9c4625c12567b60062f771/06357a22162d4e69c1256d2f003147eb?OpenDocument">
+      Marco Kaiser's setup guide.</a></p>
       <H2>&nbsp;</H2>
       <h1>Manufacturers</h1>
       <p>They're building home theater computers, and some of them have chosen 
