Updated download page

--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -54,7 +54,25 @@ width="100%" height="2"></td>
 
 <tr>
 <td colspan="3" height="1542"><!-- #BeginEditable "Text" -->
-<p>Version 4.0.1&#151;<b>Alpha</b>&#151;[<a href=
+<p>Like many open source programs DScaler has a release schedule that can be somewhat
+confusing.  Below we will list the releases that have been passed though a
+test cycle on the main developer list.  A full list of all releases can be seen
+<a href="http://sourceforge.net/project/showfiles.php?group_id=7420">here</a>.
+For most users we recommend installing whatever version is at the top of this list.  
+If you have serious problems with it then revert back to the last release marked as stable.</p>
+   
+<p>Version 4.1.8&#151;<b>Beta</b>&#151;[<a href=
+"http://prdownloads.sourceforge.net/deinterlace/DScaler418.exe">Setup Program</a>] [<a href=
+"http://prdownloads.sourceforge.net/deinterlace/DScaler418src.zip">Source Zipped</a>]</p>
+<ul>
+<li>Support for SAA713x based cards</li> 
+<li>Support for CX2388x based cards</li> 
+<li>Multi-monitor support</li> 
+<li>New MoComp2 deinterlacing mode</li> 
+<li>Lots of other changes and fixes</li> 
+</ul>
+
+<p>Version 4.0.1&#151;<b>Superseded</b>&#151;[<a href=
 "http://prdownloads.sourceforge.net/deinterlace/DScaler401.exe">Setup Program</a>] [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/DScaler401src.zip">Source Zipped</a>]</p>
 <ul>
@@ -205,7 +223,7 @@ OSD)</li>
 <li>Tuner menu option fix.</li>
 </ul>
 
-<p>Version 2.1.1&#151;<b>Superceded</b>&#151;[<a href=
+<p>Version 2.1.1&#151;<b>Superseded</b>&#151;[<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV211exe.zip">Binary
 Zipped</a>] [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV211src.zip">Source
@@ -269,7 +287,7 @@ binary changes.</li>
 zip is smaller than 2.0.1 </li>
 </ul>
 
-<p>Version 2.0.1&#151;<b>Superceded</b>&#151;[<a href=
+<p>Version 2.0.1&#151;<b>Superseded</b>&#151;[<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV201exe.zip">Binary
 Zipped</a>] [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV201src.zip">Source
@@ -416,7 +434,7 @@ subdirectory</li>
 href="bugs/Bugs_107.htm">Known Bugs</a> for current list</li>
 </ul>
 
-<p>Version 1.6 Beta 4&#151;<b>Superceded</b>&#151;[<a href=
+<p>Version 1.6 Beta 4&#151;<b>Superseded</b>&#151;[<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV16b4.zip">Binary
 Zipped</a>] [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV16src.zip">Source
@@ -437,7 +455,7 @@ install</li>
 additional details</li>
 </ul>
 
-<p>Version 1.5&#151;<b>Superceded</b>&#151;[<a href=
+<p>Version 1.5&#151;<b>Superseded</b>&#151;[<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV15exe.zip">Binary
 Zipped</a>] [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV15src.zip">Source
@@ -454,7 +472,7 @@ some tweaking)</li>
 <li>Note: Teletext and CC broken</li>
 </ul>
 
-<p>Version 1.4&#151;<b>Superceded</b>&#151;[<a href=
+<p>Version 1.4&#151;<b>Superseded</b>&#151;[<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV14exe.zip">Binary
 Zipped</a>] [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV14src.zip">Source
@@ -468,7 +486,7 @@ Zipped</a>] [<a href="readme/dTV_Readme104.htm">README</a>]</p>
 <li>Overscan support</li>
 </ul>
 
-<p>Version 1.3 &#151;<b>Superceded</b>&#151; [<a href=
+<p>Version 1.3 &#151;<b>Superseded</b>&#151; [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTv13aexe.zip">Binary
 Zipped</a>] [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTV13asrc.zip">Source
@@ -486,7 +504,7 @@ Zipped</a>] [<a href="readme/dTV_Readme103.htm">README</a>]</p>
 <li>Open Source video deinterlace version 1</li>
 </ul>
 
-<p>Version 1.2 &#151;<b>Superceded</b>&#151; [<a href=
+<p>Version 1.2 &#151;<b>Superseded</b>&#151; [<a href=
 "http://prdownloads.sourceforge.net/deinterlace/dTVex12.zip">Binary
 Zipped</a>] [<a href="readme/dTV_Readme102.htm">README</a>]</p>
 
