--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -115,6 +115,10 @@ support is based.  And for providing details on the saa7130/4 chip.</li>
 
 <li>Robin Zalek (aka Bob) for the new icon.</li>
 
+<li>Robert Schlabbach for several patches and eye for detail.</li>
+
+<li>Torsten Seeboth and Lavrenov Dmitrij for sorting out issues with CX2388x sound.</li>
+
 <li>Everybody on the deinterlace project mailing list.</li>
 </ul>
 
