Added Sven Grothklags to thanks

--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -119,6 +119,8 @@ support is based.  And for providing details on the saa7130/4 chip.</li>
 
 <li>Torsten Seeboth and Lavrenov Dmitrij for sorting out issues with CX2388x sound.</li>
 
+<li>Sven Grothklags for audio patches.</li>
+
 <li>Everybody on the deinterlace project mailing list.</li>
 </ul>
 
