--- a/htdocs/Links.htm
+++ b/htdocs/Links.htm
@@ -80,6 +80,8 @@ Linux Driver</a><br>
 <p>
  <a href="http://www.sdisilk.com/">SDI Silk Card</a><br>
  <a href="http://www.immersiveinc.com/holo3d/index.htm">Holo3DGraph from Immersive</a><br>
+ <a href="http://www.pluggedin.tv/sweetspot">Sweetspot Video Processor</a><br>
+ <a href="http://www.pmsvideo.com/">PMSVideo SDI, PDI and PDI Deluxe cards</a><br>
 </blockquote>
 
 <h3>Sites we visit</h3>
