--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -54,7 +54,7 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.8</h1>
+<h1>DScaler - version 4.1.9</h1>
 
 <h2>What's New</h2>
 
@@ -83,7 +83,7 @@ See the GNU General Public License for more details</p>
 <li>You will need a processor faster than about Pentium II 400MHz
 to use all the features.</li>
 <li>You will definitely need a PCI TV card with a BT848 BT849
-BT878 BT879 in it.</li>
+BT878 BT879 CX23880 CX23881 CX23883 or SAA7134 chip in it.</li>
 <li>You will a graphics card that supports YUY2 overlays and has enough video memory
 spare for the video buffers DScaler uses.</li>
 <li>This software will not work with the video in sections of ATI All-in-Wonder 
