--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,19 +54,18 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.8</h1>
+<h1>DScaler - version 4.1.9</h1>
 
-<p>What's new (since 4.1.7):<br>
+<p>What's new (since 4.1.8):<br>
 <ul>
-<li>Timeshift avi file path in advanced settings</li>
-<li>Improved Preview mode</li>
-<li>Ctrl+Up and Ctrl+Down keys added to request previous or next page of channels/stills when in previous mode</li>
-<li>Improved Toolbars and skins code</li>
+<li>Fixed for audio with CX2388x cards</li>
+<li>Support for PMS PDI Deluxe/Sweetspot cards</li>
+<li>Support for MT2050 tuners</li>
 </ul></p>
 
 <p>What's Improved</p>
 <ul>
-<li>Some multiple-monitor bug fixes</li>
+<li>A decent skin added</li>
 <li>Some timethift bug fixes</li>
 <li>Lots of other minor bug fixes</li> 
 </ul></p>
