getting ready for 4.1.10

--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,19 +54,18 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.9</h1>
+<h1>DScaler - version 4.1.10</h1>
 
-<p>What's new (since 4.1.8):<br>
+<p>What's new (since 4.1.9):<br>
 <ul>
-<li>Fixed for audio with CX2388x cards</li>
-<li>Support for PMS PDI Deluxe/Sweetspot cards</li>
-<li>Support for MT2050 tuners</li>
+<li>Hopefully not trashing your machine like 4.1.9</li>
 </ul></p>
 
 <p>What's Improved</p>
 <ul>
-<li>A decent skin added</li>
-<li>Some timethift bug fixes</li>
+<li>More Fixes for audio with CX2388x cards</li>
+<li>Safer use of CX2388x cards with warning</li>
+<li>Timeshift fixes</li>
 <li>Lots of other minor bug fixes</li> 
 </ul></p>
 
