--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,19 +54,18 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 4.1.10</h1>
+<h1>DScaler - version 4.1.11</h1>
 
-<p>What's new (since 4.1.9):<br>
+<p>What's new (since 4.1.10):<br>
 <ul>
-<li>Hopefully not trashing your machine like 4.1.9</li>
+<li>Nothing new</li>
 </ul></p>
 
 <p>What's Improved</p>
 <ul>
 <li>More Fixes for audio with CX2388x cards</li>
-<li>Safer use of CX2388x cards with warning</li>
-<li>Timeshift fixes</li>
-<li>Lots of other minor bug fixes</li> 
+<li>Fixes for some XP2 audio bugs with with bt8x8 cards</li>
+<li>A few other minor bug fixes</li> 
 </ul></p>
 
 <p>What's Experimental:
