Minor improvements to quality control Preparation for next version Start on integrating film detect

--- a/DScaler5/Help/FAQ.htm
+++ b/DScaler5/Help/FAQ.htm
@@ -55,7 +55,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3">Last update: April 14th 2004</td>
+<td colspan="3">Last update: August 31th 2004</td>
 </tr>
 <tr>
 </tr>
@@ -66,8 +66,13 @@ height="2"></td>
 
 <h2>What is DScaler 5?</h2>
 
-<p>DScaler 5 is an attempt to build a fully functional media player targetted at
-large screen displays and high quality images and sound.</p>
+<p>DScaler 5 is planned to be an attempt to build a fully functional media player 
+targetted at large screen displays and high quality images and sound. Currently is consists of
+two filters and nothing else.</p>
+
+<h2>How to I use/test the filters?</h2>
+
+<p>The filters should just work in any appilcation that plays back MPEG 2 files.</p>
 
 <h2>Why aren't there more questions?</h2>
 
