--- a/DScaler5/Help/MpegVideo.htm
+++ b/DScaler5/Help/MpegVideo.htm
@@ -100,6 +100,23 @@ height="2"></td>
           <td>Controls how the decoder responds to AFD infromation that is present 
 					in some DVB streams.</td>
         </tr>
+        <tr> 
+          <td>Hardcode for PAL with ffdshow</td>
+          <td>off</td>
+          <td>Allows the user to work around the bugs in ffdshow. Set this flag 
+					to true when you want to playback a PAL DVD.</td>
+        </tr>
+        <tr> 
+          <td>IDCT to use</td>
+          <td>Accelerated</td>
+          <td>Allows the user to choose the IDCT method.  Mostly provided for interest.</td>
+        </tr>
+        <tr> 
+          <td>Colour space to output</td>
+          <td>YUY2</td>
+          <td>Allows the user to choose the output colour space. YV12 can be used for 
+					progressive (i.e. film material).</td>
+        </tr>
       </table>
 			</p>
       <!-- #EndEditable --> </td>
