--- a/DScaler5/Help/Thanks.htm
+++ b/DScaler5/Help/Thanks.htm
@@ -58,6 +58,7 @@ height="2"></td>
 
 <p>The DScaler team would like to express their gratitude to:</p>
 <ul>
+<li>Laurent for all his testing and great bug reports.</li>
 <li>All the <a href="Authors.htm">authors</a> who have contributed 
 code to the project.</li>
 
